--- a/blog.html
+++ b/blog.html
@@ -79,7 +79,7 @@
           <a class="nav-link" href="/abhitech/Home.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/abhitech/Blog.html">Blog</a>
+          <a class="nav-link" href="/abhitech/blog.html">Blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/abhitech/Contact.html">Contact</a>
