--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/abhitech/Home.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/abhitech/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/abhitech/blog.html">Blog</a>
