--- a/contact.html
+++ b/contact.html
@@ -118,13 +118,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/abhitech/Home.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/abhitech/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/abhitech/Blog.html">Blog</a>
+          <a class="nav-link" href="/abhitech/blog.html">Blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/abhitech/Contact.html">Contact</a>
+          <a class="nav-link" href="/abhitech/contact.html">Contact</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
