--- a/blog.html
+++ b/blog.html
@@ -31,8 +31,9 @@
             padding: 15px;
             border-radius: 8px;
             box-shadow: 0 5px 5px rgba(0, 0, 0, 0.15);
-            flex-wrap: wrap;
-            justify-content: center;
+            display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
         }
         .box h4{
             margin-bottom: 10px;
