--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       padding: 15px;
       border-radius: 8px;
       box-shadow: 0 5px 5px rgba(0, 0, 0, 0.15);
+   display: flex;
       flex-wrap: wrap;
       justify-content: center;
     }
